--- a/site/index.html
+++ b/site/index.html
@@ -6,6 +6,6 @@
     <title>Hello Coursera</title>
   </head>
   <body>
-    Hello Coursera!!
+    <h1>Hello Coursera! It's a greate Course</h1>
   </body>
 </html>
