adding a span to the file

--- a/site/index.html
+++ b/site/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -7,5 +8,15 @@
   </head>
   <body>
     <h1>Hello Coursera! It's a greate Course</h1>
+    <h2>Here is me Showaib , How are you</h2>
+    <div class="list">
+      <ul>
+        <li>People</li>
+        <li>Cars</li>
+        <li>Animals</li>
+        <li>Places</li>
+        <span>good work</span>
+      </ul>
+    </div>
   </body>
 </html>
