--- a/site/index.html
+++ b/site/index.html
@@ -4,19 +4,33 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="main.css">
     <title>Hello Coursera</title>
   </head>
   <body>
-    <h1>Hello Coursera! It's a greate Course</h1>
-    <h2>Here is me Showaib , How are you</h2>
-    <div class="list">
-      <ul>
-        <li>People</li>
-        <li>Cars</li>
-        <li>Animals</li>
-        <li>Places</li>
-        <span>good work</span>
-      </ul>
+    
+    // Design The header
+
+    <section id="header"></section>
+
+    <div class="container">
+      <div class="header-con">
+        <div class="logo-con">
+
+        </div>
+        <div class="list-con">
+          <ul>
+            <li><a href="#">Blog</a></li>
+            <li><a href="#">About Us</a></li>
+            <li><a href="#">Courses</a></li>
+            <li><a href="#">Contact</a></li>
+          </ul>
+        </div>
+      </div>
+      <div class="main-vp">
+
+      </div>
+      
     </div>
   </body>
 </html>
