--- a/site/index.html
+++ b/site/index.html
@@ -9,16 +9,19 @@
   </head>
   <body>
     
-    // Design The header
+     <!-- Design The header -->
+
+
+     <!-- header Section  -->
 
     <section id="header"></section>
 
     <div class="container">
       <div class="header-con">
-        <div class="logo-con">
-          
+        <div class="header-logo">
+          <img src="https://w7.pngwing.com/pngs/51/537/png-transparent-logo-graphic-design-abstract-simple-villain-creative-logo-leaf-simple-fashion-thumbnail.png" alt="">
         </div>
-        <div class="list-con">
+        <div class="header-list">
           <ul>
             <li><a href="#">Blog</a></li>
             <li><a href="#">About Us</a></li>
