good design as a beganing

--- a/site/index.html
+++ b/site/index.html
@@ -19,7 +19,8 @@
     <div class="container">
       <div class="header-con">
         <div class="header-logo">
-          <img src="https://w7.pngwing.com/pngs/51/537/png-transparent-logo-graphic-design-abstract-simple-villain-creative-logo-leaf-simple-fashion-thumbnail.png" alt="">
+          <img src="http://assets.stickpng.com/images/612a32707c7c75000443b278.png" alt="">
+          <h3>DeltaStone</h3>
         </div>
         <div class="header-list">
           <ul>
@@ -31,8 +32,24 @@
         </div>
       </div>
       <div class="main-vp">
+          <div class="left-column">
+            <h2>Hello Every body</h2>
+          </div>
+          <div class="right-column">
+            <h2>welcome to the show</h2>
+          </div>
 
       </div>
+
+      <!-- Projects Section  -->
+
+      <section id="projects">
+
+        <div class="projects-container">
+          <h1>this is my awesome projects</h1>
+        </div>
+
+      </section>
       
     </div>
   </body>
